@@ -51,3 +51,4 @@ Version 1.1
  - Fixed Issue 336 - Update Aeon Labs DoorSensor Config File (Alex)
  - Fixed Issue 337 - Update Aeon Labs Multi Sensor Config File (Alex)
  - Fixed Issue 338 - Update Aeon Labs Multi Sensor Config File (Alex)
+ - Fixed Issue 339 - Update Fibaro Door Opening Sensor Config File (Alex)
